--- a/client/src/index.html
+++ b/client/src/index.html
@@ -2,7 +2,7 @@
   <html lang='en'>
   <head>
   <meta name="viewport" content="user-scalable=no, width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
-
+  <meta name="facebook-domain-verification" content="68ibug8u1qal8wh0bcpizvun4j3gx6" />
   <style type="text/css">
     body, html { height: 100%; width: 100%; margin: 0; padding: 0; border: none; }
     body { overflow: hidden; }
